# c-react-ssr-example

./: .babelrc  .babelrc.csr.json  .babelrc.ssr.json  .gitignore  CMakeLists.txt  DockerFile  README.md  SETUP_MANUALLY.md  package.json
server/: helloworld.c  main.c  ssr.h
web/: app.jsx  client.jsx  imported.js  index.html  server.jsx
web/routes/: Home.jsx  Lazy.jsx  Product.jsx
